[gd_scene load_steps=7 format=3 uid="uid://cutuxej3ec7fc"]

[ext_resource type="Script" path="res://control.gd" id="1_7juwj"]
[ext_resource type="Texture2D" uid="uid://lljwvn3t6kpd" path="res://Ellipse 1.png" id="2_d7hha"]
[ext_resource type="Texture2D" uid="uid://dx536jdojopp3" path="res://Ellipse 2.png" id="3_vvh2s"]

[sub_resource type="Theme" id="Theme_gl0mn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfgya"]
bg_color = Color(0.2, 0.670588, 0.733333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cpvkg"]
bg_color = Color(0.490196, 0.631373, 0.627451, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 1.371
anchor_bottom = 1.0
offset_right = -556.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7juwj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1144.0
offset_bottom = 642.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 650)
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme = SubResource("Theme_gl0mn")

[node name="label4" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="Última posição3" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = " Última posição:"

[node name="ProgressBar7" type="ProgressBar" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
min_value = -90.0
max_value = 90.0

[node name="ProgressBar8" type="ProgressBar" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
min_value = -2.0
max_value = 78.0

[node name="ProgressBar9" type="ProgressBar" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
min_value = -100.0

[node name="ultima" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Voltar para essa posição"

[node name="label6" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="Última posição" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = " Penúltima posição:"

[node name="ProgressBar1" type="ProgressBar" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
min_value = -90.0
max_value = 90.0

[node name="ProgressBar2" type="ProgressBar" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
min_value = -2.0
max_value = 78.0

[node name="ProgressBar3" type="ProgressBar" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
min_value = -100.0

[node name="penultima" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Voltar para essa posição"

[node name="label5" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="Última posição2" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = " Antepenúltima posição:"

[node name="ProgressBar4" type="ProgressBar" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
min_value = -90.0
max_value = 90.0

[node name="ProgressBar5" type="ProgressBar" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
min_value = -2.0
max_value = 78.0

[node name="ProgressBar6" type="ProgressBar" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
min_value = -100.0

[node name="antepenultima" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Voltar para essa posição"

[node name="label7" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="Repetir" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Repetir ultimas coordenadas"

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 650)
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(770, 0)
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3"]
layout_mode = 2
text = " 

"

[node name="atualizar" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3"]
custom_minimum_size = Vector2(90, 50)
layout_mode = 2
text = "
"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3"]
layout_mode = 2
text = " 

"

[node name="Junta1container" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3/Junta1container"]
layout_mode = 2
text = "                                                                      Junta 1 -> rotação"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3/Junta1container"]
layout_mode = 2
text = "            Esquerda                                                                                                             Direita                    "

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3/Junta1container"]
layout_mode = 2
min_value = -90.0
max_value = 90.0
value = 0.01

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3"]
layout_mode = 2
text = " 

"

[node name="Junta2container" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3/Junta2container"]
layout_mode = 2
text = "                                                                       Junta 2 -> altura"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3/Junta2container"]
layout_mode = 2
text = "            Cima                                                                                                                      Baixo                    "

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3/Junta2container"]
layout_mode = 2
min_value = -2.0
max_value = 78.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3"]
layout_mode = 2
text = " 

"

[node name="junta3container" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3/junta3container"]
layout_mode = 2
text = "                                                                      Junta 3 -> estica"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3/junta3container"]
layout_mode = 2
text = "            Encolhido                                                                                                             Esticado                    "

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/PanelContainer/VBoxContainer3/junta3container"]
layout_mode = 2
min_value = -100.0

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 650)
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0

[node name="Container" type="CanvasLayer" parent="."]

[node name="CanvasLayer" type="ColorRect" parent="Container"]
custom_minimum_size = Vector2(40, 40)
anchors_preset = -1
anchor_right = 0.025
anchor_bottom = 0.078
offset_left = 1031.0
offset_right = 1462.5
offset_bottom = 597.456

[node name="Ellipse1" type="Sprite2D" parent="Container"]
position = Vector2(1268, 390)
rotation = -3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_d7hha")

[node name="ColorRect" type="ColorRect" parent="Container"]
offset_left = 1214.0
offset_top = 438.0
offset_right = 1322.0
offset_bottom = 478.0
color = Color(0.603922, 0.603922, 0.603922, 1)

[node name="Label" type="Label" parent="Container/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 11
text = "DOBOT MAGICIAN
LITE"

[node name="Button" type="Button" parent="Container"]
offset_left = 1033.0
offset_top = 3.0
offset_right = 1495.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_qfgya")
theme_override_styles/hover = SubResource("StyleBoxFlat_cpvkg")
text = "Atualizar posição"

[node name="Ellipse2" type="Sprite2D" parent="Container"]
position = Vector2(1108, 451)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_vvh2s")

[connection signal="pressed" from="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer/ultima" to="." method="_on_voltar_ultima_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer/penultima" to="." method="_on_voltar_penultima_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer/antepenultima" to="." method="_on_voltar_antepenultima_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/PanelContainer2/VBoxContainer/Repetir" to="." method="_on_repetir_pressed"]
[connection signal="pressed" from="Container/Button" to="." method="_on_atualizar_pressed"]
